# NovelTTS

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  Upload.md  docker-compose.yml  fix_test.py  package.json  pnpm-lock.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_drop_char_ai_add_voice_assignments.py
backend/app/: config.py  logging_setup.py  main.py
backend/app/models/: __init__.py  audio_job.py  book.py  chapter.py  character.py  character_profile.py  enums.py  pronunciation_entry.py  segment.py  user.py  voice.py  voice_assignment.py  voice_requirement.py
backend/app/routers/: books.py  generation.py  pronunciations.py  voice_settings.py
backend/app/services/: attribution.py  audio_generation.py  job_queue.py  phonetics_inference.py  ssml_injector.py  text_chunker.py  voice_resolution.py
backend/scripts/: generate_voice_previews.py  ingest_edge_tts_voices.py  seed_kokoro_voices.py
backend/tests/: attribution_benchmark.py  conftest.py  export_attribution_fixtures_from_db.py  export_attribution_fixtures_from_pipeline.py  run_attribution_benchmark.py  run_attribution_experiment_matrix.py  run_phase4_runtime_validation.py  test_attribution.py  test_attribution_benchmark_cli.py  test_audio_generation.py  test_generation_router.py  test_phonetics_inference.py  test_pronunciation_api.py  test_ssml_injector.py  test_text_chunker.py  test_voice_resolution.py  test_voice_settings_router.py  update_attribution_fixture_lock.py
(+88 files in other folders)
